// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LandingPage render::No Models 1`] = `
<div
  data-testid="landing-page"
>
  <section
    class="pf-c-page__main-section pf-m-light"
  >
    <div
      class="pf-l-split pf-m-gutter"
    >
      <div
        class="pf-l-split__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <h2
            class="pf-c-title pf-m-3xl"
          >
            path
          </h2>
        </div>
      </div>
      <div
        class="pf-l-split__item"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-secondary"
          data-ouia-component-id="0"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Set Data Dictionary
        </button>
      </div>
    </div>
    <div
      class="pf-c-toolbar"
      data-testid="landing-page-toolbar"
      id="landing-page-toolbar"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-input-group"
            >
              <form>
                <span
                  style="display: flex;"
                >
                  <input
                    aria-invalid="false"
                    aria-label="filter models"
                    class="pf-c-form-control"
                    data-testid="landing-page-toolbar__model-filter"
                    id="model-filter-input"
                    name="model-filter-input"
                    placeholder="Filter models by name"
                    type="search"
                    value=""
                  />
                  <button
                    aria-disabled="false"
                    aria-label="filter button for filter input"
                    class="pf-c-button pf-m-control"
                    data-ouia-component-id="1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="landing-page-toolbar__submit"
                    id="models-filter"
                    type="submit"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        transform=""
                      />
                    </svg>
                  </button>
                </span>
              </form>
            </div>
          </div>
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="landing-page-toolbar-expandable-content-0"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-fill"
  >
    <section>
      <div
        class="pf-c-empty-state pf-m-sm"
        data-testid="empty-state-no-models"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M560 288h-80v96l-32-21.3-32 21.3v-96h-80c-8.8 0-16 7.2-16 16v192c0 8.8 7.2 16 16 16h224c8.8 0 16-7.2 16-16V304c0-8.8-7.2-16-16-16zm-384-64h224c8.8 0 16-7.2 16-16V16c0-8.8-7.2-16-16-16h-80v96l-32-21.3L256 96V0h-80c-8.8 0-16 7.2-16 16v192c0 8.8 7.2 16 16 16zm64 64h-80v96l-32-21.3L96 384v-96H16c-8.8 0-16 7.2-16 16v192c0 8.8 7.2 16 16 16h224c8.8 0 16-7.2 16-16V304c0-8.8-7.2-16-16-16z"
              transform=""
            />
          </svg>
          <h4
            class="pf-c-title pf-m-lg"
          >
            You don't have any PMML Models
          </h4>
          <div
            class="pf-c-empty-state__body"
          >
            PMML uses XML to represent predictive models. One or more predictive models can be contained in a PMML document.
          </div>
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-primary"
            data-ouia-component-id="2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            data-testid="empty-state-no-models__create-model"
            type="button"
          >
            Create Model
          </button>
        </div>
      </div>
    </section>
  </section>
</div>
`;

exports[`LandingPage render::With Supported Model 1`] = `
<div
  data-testid="landing-page"
>
  <section
    class="pf-c-page__main-section pf-m-light"
  >
    <div
      class="pf-l-split pf-m-gutter"
    >
      <div
        class="pf-l-split__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <h2
            class="pf-c-title pf-m-3xl"
          >
            path
          </h2>
        </div>
      </div>
      <div
        class="pf-l-split__item"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-secondary"
          data-ouia-component-id="3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Set Data Dictionary
        </button>
      </div>
    </div>
    <div
      class="pf-c-toolbar"
      data-testid="landing-page-toolbar"
      id="landing-page-toolbar"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-input-group"
            >
              <form>
                <span
                  style="display: flex;"
                >
                  <input
                    aria-invalid="false"
                    aria-label="filter models"
                    class="pf-c-form-control"
                    data-testid="landing-page-toolbar__model-filter"
                    id="model-filter-input"
                    name="model-filter-input"
                    placeholder="Filter models by name"
                    type="search"
                    value=""
                  />
                  <button
                    aria-disabled="false"
                    aria-label="filter button for filter input"
                    class="pf-c-button pf-m-control"
                    data-ouia-component-id="4"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="landing-page-toolbar__submit"
                    id="models-filter"
                    type="submit"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        transform=""
                      />
                    </svg>
                  </button>
                </span>
              </form>
            </div>
          </div>
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="landing-page-toolbar-expandable-content-1"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-fill"
  >
    <section>
      <div
        class="pf-l-gallery pf-m-gutter"
      >
        <div
          data-testid="landing-page__model-card"
        >
          <article
            class="pf-c-card pf-m-hoverable model-card"
            data-testid="model-card"
          >
            <div
              class="pf-c-card__header"
            >
              <div
                class=""
              >
                <img
                  alt="Scorecard"
                  class="model-card__icon"
                  data-testid="model-card__icon"
                  src="images/card-icon-scorecard.svg"
                />
              </div>
            </div>
            <div
              class="pf-c-card__title model-card__title"
            >
              <span
                data-testid="model-card__title"
              >
                &lt;Undefined&gt;
              </span>
            </div>
             
            <div
              class="pf-c-card__body"
            >
              <div
                data-testid="model-card__model-type"
              >
                Scorecard
              </div>
            </div>
            <div
              class="pf-c-card__footer"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-primary"
                data-ouia-component-id="5"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="model-card__delete"
                type="button"
              >
                Delete
              </button>
            </div>
          </article>
        </div>
      </div>
    </section>
  </section>
</div>
`;
